The buttons in the title bar will no longer wrap to the next line when a smaller screen is used.

--- a/src/jsontree.js.scss
+++ b/src/jsontree.js.scss
@@ -181,6 +181,7 @@ div.json-tree-js {
             margin-left: calc( var(--json-tree-js-spacing) * 6 );
             flex-grow: 1;
             text-align: right;
+            white-space: nowrap;
 
             @media (min-width: $minimum-width) { 
                 margin-left: calc( var(--json-tree-js-spacing) * 12 );
